src/test/deca/syntax/valid/test23_class.deca
// Description:
//    Programme testant les déclarations de classes.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
// 	  aucun
//
// Historique:
//    cree le 15/01/2020

class A {
}

class B extends A {
}

class C {
}

class D extends B {
}