src/test/deca/syntax/invalid/test35_class_decl.deca
// Description:
//    Programme testant les declarations de classes.
//	  Etape(s) : A
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//	  Contextuellement : NON
//
// Resultats:
// 	  test_lex : pas d'erreur
//    test_synt : erreur ligne 17 : missing '}' at 'class'
//
// Historique:
//    cree le 17/01/2020

class A {

class B {
}